# cognio-rlaf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINKEDIN_ARTICLE.md  LINKEDIN_POST.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  stale.yml  welcome.yml
benchmarks/: README.md  run_all.py  runner.py  visualize.py
docs/: GOOD_FIRST_ISSUES.md  README.md  api_reference.md
docs/articles/: latest-rlaif-developments-2024-2025.md
examples/: code_generation.py  itsm_agent.py  simple_demo.py
rlaf/: __init__.py
rlaf/agents/: __init__.py  actor.py  critic.py
rlaf/algorithms/: __init__.py  arpo.py  dpo.py  grpo_tcr.py  ppo.py
rlaf/core/: __init__.py  base.py  trainer.py
rlaf/feedback/: __init__.py  collector.py  human_in_loop.py
rlaf/rewards/: __init__.py  aggregator.py
