[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaf"
version = "0.1.0"
description = "Reinforcement Learning from Agentic Feedback - A unified framework for training AI agents with multi-perspective critic ensembles"
readme = "README.md"
authors = [
    {name = "Cognio Lab", email = "moses@cogniolab.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement-learning", "multi-agent", "ai", "llm", "agentic-ai", "rlhf", "rlaif"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.16.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/cogniolab/cognio-rlaf"
Documentation = "https://github.com/cogniolab/cognio-rlaf#readme"
Repository = "https://github.com/cogniolab/cognio-rlaf"
Issues = "https://github.com/cogniolab/cognio-rlaf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlaf*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
